tests/ui/imports/import-loop.rs
// error-pattern:import

use y::x;

mod y {
    pub use y::x;
}

fn main() { }
